@@ -37,6 +37,8 @@ static VALUE mOSAEventDispatcher;
 static ID sClasses;
 static ID sApp;
 
+#define INSPECT_AEDESC 0
+
 static void
 rbosa_element_free (void *ptr)
 {
@@ -366,6 +368,7 @@ bails:
     return CBOOL2RVAL (ok);
 }
 
+#if INSPECT_AEDESC
 static VALUE
 rbosa_element_inspect (VALUE self)
 {
@@ -383,6 +386,7 @@ rbosa_element_inspect (VALUE self)
 
     return CSTR2RVAL (buf);
 }
+#endif
 
 static long
 __rbosa_elementlist_count (AEDescList *list)
@@ -525,7 +529,9 @@ Init_osa (void)
     rb_define_method (cOSAElement, "__type__", rbosa_element_type, 0);
     rb_define_method (cOSAElement, "__data__", rbosa_element_data, -1);
     rb_define_method (cOSAElement, "==", rbosa_element_eql, 1);
+#if INSPECT_AEDESC
     rb_define_method (cOSAElement, "inspect", rbosa_element_inspect, 0);
+#endif
 
     cOSAElementList = rb_define_class_under (mOSA, "ElementList", cOSAElement);
     rb_define_singleton_method (cOSAElementList, "__new__", rbosa_elementlist_new, -1);
